--- a/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
+++ b/Topic 07 - ANN/S4 - ANN Lecture - Verify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "source": [
     "import os, time\r\n",
     "import tensorflow as tf\r\n",
@@ -20,11 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "source": [
     "X = np.array([[1]])\r\n",
     "y = np.array([10])\r\n",
-    "\r\n",
     "print(X.shape)"
    ],
    "outputs": [
@@ -40,13 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "source": [
     "tf.keras.backend.clear_session()\r\n",
-    "\r\n",
     "init = tf.constant_initializer(np.array([1]))\r\n",
-    "\r\n",
-    "\r\n",
     "layerIn = Input(shape=(1,))\r\n",
     "layerMid = Dense(1, kernel_initializer=tf.constant_initializer(np.array([[1]])), activation='sigmoid')(layerIn)\r\n",
     "layerMid = Dense(2, kernel_initializer=tf.constant_initializer(np.array([[2,3]])), activation='sigmoid')(layerMid)\r\n",
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "source": [
     "model.summary()"
    ],
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "source": [
     "model.trainable_variables"
    ],
@@ -110,14 +106,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -135,30 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "source": [
     "model.compile(\r\n",
     "        optimizer=tf.optimizers.SGD(learning_rate=0.1, momentum=0.0),\r\n",
-    "        loss='mean_squared_error', metrics=['mean_absolute_percentage_error'])\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "source": [
-    "history = model.fit(X,y, epochs=2)"
+    "        loss='mean_squared_error', metrics=['mean_absolute_percentage_error'])\r\n",
+    "history = model.fit(X,y, epochs=1)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Epoch 1/2\n",
-      "1/1 [==============================] - 0s 0s/step - loss: 5.0823 - mean_absolute_percentage_error: 22.5440\n",
-      "Epoch 2/2\n",
-      "1/1 [==============================] - 0s 1ms/step - loss: 0.3519 - mean_absolute_percentage_error: 5.9318\n"
+      "1/1 [==============================] - 0s 0s/step - loss: 5.0823 - mean_absolute_percentage_error: 22.5440\n"
      ]
     }
    ],
@@ -166,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "source": [
     "model.trainable_weights"
    ],
@@ -175,25 +160,25 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<tf.Variable 'dense/kernel:0' shape=(1, 1) dtype=float32, numpy=array([[1.263263]], dtype=float32)>,\n",
-       " <tf.Variable 'dense/bias:0' shape=(1,) dtype=float32, numpy=array([0.26326293], dtype=float32)>,\n",
-       " <tf.Variable 'dense_1/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[2.2434843, 3.1779945]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_1/bias:0' shape=(2,) dtype=float32, numpy=array([0.32737896, 0.23953818], dtype=float32)>,\n",
+       "[<tf.Variable 'dense/kernel:0' shape=(1, 1) dtype=float32, numpy=array([[1.2283885]], dtype=float32)>,\n",
+       " <tf.Variable 'dense/bias:0' shape=(1,) dtype=float32, numpy=array([0.22838853], dtype=float32)>,\n",
+       " <tf.Variable 'dense_1/kernel:0' shape=(1, 2) dtype=float32, numpy=array([[2.201392 , 3.1488097]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_1/bias:0' shape=(2,) dtype=float32, numpy=array([0.2754798 , 0.20355378], dtype=float32)>,\n",
        " <tf.Variable 'dense_2/kernel:0' shape=(2, 1) dtype=float32, numpy=\n",
-       " array([[4.4712853],\n",
-       "        [5.5171843]], dtype=float32)>,\n",
-       " <tf.Variable 'dense_2/bias:0' shape=(1,) dtype=float32, numpy=array([0.569516], dtype=float32)>]"
+       " array([[4.36605  ],\n",
+       "        [5.4056273]], dtype=float32)>,\n",
+       " <tf.Variable 'dense_2/bias:0' shape=(1,) dtype=float32, numpy=array([0.45087987], dtype=float32)>]"
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "source": [
     "y_pred = model(X).numpy()\r\n",
     "print(y_pred)"
@@ -203,7 +188,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[9.79833]]\n"
+      "[[9.406819]]\n"
      ]
     }
    ],
@@ -211,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "source": [
     "def sigmoid(x):\r\n",
     "    return 1/(1 + np.exp(-x))"
@@ -221,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "source": [
     "phi_h = sigmoid(1)\r\n",
     "print(phi_h)"
@@ -239,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "source": [
     "z_h_1 = phi_h*2\r\n",
     "z_h_2 = phi_h*3"
@@ -249,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "source": [
     "phi_out_1 = sigmoid(z_h_1)\r\n",
     "phi_out_2 = sigmoid(z_h_2)\r\n",
@@ -268,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "source": [
     "y_hat = phi_out_1*4 + phi_out_2*5\r\n",
     "print(y_hat)"
@@ -286,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "source": [
     "tf.keras.metrics.mean_squared_error(\r\n",
     "    y, y_hat\r\n",
@@ -301,14 +286,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "source": [
     "np.power(y_hat-y,2)"
    ],
@@ -321,14 +306,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "source": [
     "g = ((y_hat-y)*2)[0]"
    ],
@@ -337,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "source": [
     "print(g*4)\r\n",
     "(print(g*5))"
@@ -356,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "source": [
     "print(g*0.811)\r\n",
     "print(g*0.899)"
@@ -375,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "source": [
     "4-(0.1*-0.914)"
    ],
@@ -388,14 +373,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "source": [
     "5-(0.1*-1.013)"
    ],
@@ -408,7 +393,92 @@
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 21
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Test Loss Function"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "source": [
+    "y_true = np.array([[0, 1, 0], [0, 0, 1]])\r\n",
+    "y_pred = np.array([[0.05, 0.95, 0], [0.1, 0.8, 0.1]])\r\n",
+    "# Using 'auto'/'sum_over_batch_size' reduction type.\r\n",
+    "cce = tf.keras.losses.CategoricalCrossentropy()\r\n",
+    "cce(y_true, y_pred).numpy()\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.1769392490386963"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "source": [
+    "import sys\r\n",
+    "def J(y, a):\r\n",
+    "    eps = sys.float_info.epsilon\r\n",
+    "    return -( y*np.log(a+eps) + (1-y)*np.log(1-a+eps))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "source": [
+    "Jw = 0\r\n",
+    "for yi, ai in zip(y_true, y_pred):\r\n",
+    "    Jw += J(yi, ai).sum()\r\n",
+    "    print(Jw)\r\n",
+    "    "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.10258658877510048\n",
+      "4.119970109861069\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "source": [
+    "-(np.log(0.95)+np.log(0.1))/2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.176939193690798"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 60
     }
    ],
    "metadata": {}
