--- a/Topic 08 - CNN/C11 - MNIST - CNN Default.ipynb
+++ b/Topic 08 - CNN/C11 - MNIST - CNN Default.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "source": [
     "import tensorflow as tf\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "source": [
     "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))"
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "source": [
     "mnist = tf.keras.datasets.mnist\r\n",
     "\r\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "source": [
     "print(X_train_.shape)\r\n",
     "print(X_test_.shape)\r\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "source": [
     "# Add another dimension\r\n",
     "X_train = X_train_[..., np.newaxis]\r\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "source": [
     "# Reduce dimension size\r\n",
     "np.random.seed(0) \r\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "source": [
     "tf.keras.backend.clear_session()\r\n",
     "tf.random.set_seed(1)\r\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "source": [
     "model.summary()"
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "source": [
     "model.compile(\r\n",
     "        optimizer='adam',\r\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "source": [
     "history = model.fit(X_train, y_train, epochs=20, validation_split=0.1)"
    ],
@@ -266,9 +266,9 @@
      "name": "stdout",
      "text": [
       "Epoch 1/20\n",
-      "57/57 [==============================] - 1s 20ms/step - loss: 1.7092 - accuracy: 0.4033 - val_loss: 0.7938 - val_accuracy: 0.7950\n",
+      "57/57 [==============================] - 1s 21ms/step - loss: 1.7092 - accuracy: 0.4033 - val_loss: 0.7938 - val_accuracy: 0.7950\n",
       "Epoch 2/20\n",
-      "57/57 [==============================] - 1s 18ms/step - loss: 0.9774 - accuracy: 0.6483 - val_loss: 0.3795 - val_accuracy: 0.9200\n",
+      "57/57 [==============================] - 1s 19ms/step - loss: 0.9774 - accuracy: 0.6483 - val_loss: 0.3795 - val_accuracy: 0.9200\n",
       "Epoch 3/20\n",
       "57/57 [==============================] - 1s 19ms/step - loss: 0.7483 - accuracy: 0.7394 - val_loss: 0.3175 - val_accuracy: 0.9250\n",
       "Epoch 4/20\n",
@@ -311,8 +311,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### During training, the train accuracy will be lower than validation accuracy due to dropout."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "source": [
     "hist = history.history\r\n",
     "x_arr = np.arange(len(hist['loss'])) + 1\r\n",
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "source": [
     "test_results = model.evaluate(X_test, y_test)\r\n",
     "print('\\nTest Acc. {:.2f}%'.format(test_results[1]*100))"
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "source": [
     "# Find misclassification\r\n",
     "y_pred_tf = model(X_test)\r\n",
@@ -400,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "source": [
     "fig, axes2D = plt.subplots(3,5, figsize=(12,8))\r\n",
     "axes = list(itertools.chain.from_iterable(axes2D)) # Flatten 2D list\r\n",
