Fix typo in ANN iris

--- a/Topic 07 - ANN/C11 - Iris Data.ipynb
+++ b/Topic 07 - ANN/C11 - Iris Data.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "tf_fit = model.fit(x=X_train, y=y_train,\n",
+    "tf_fit = model.fit(x=X_train_std, y=y_train,\n",
     "        batch_size=16,\n",
     "        validation_split=0.1,\n",
     "        epochs=100, \n",
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "results = model.evaluate(X_test, y_test, verbose=0)\n",
+    "results = model.evaluate(X_test_std, y_test, verbose=0)\n",
     "print(f'Test loss: {results[0]:.4f}   Test Acc.: {results[1]:.4f}')"
    ]
   },
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "y_hat = model(X_test[:3])\n",
+    "y_hat = model(X_test_std[:3])\n",
     "print(y_hat.numpy())"
    ]
   },
